changes as requested - olive green theme

--- a/admin.html
+++ b/admin.html
@@ -6,12 +6,13 @@
     <title>Admin Panel</title>
     <style>
         :root {
-            --bg-light: #FAF8F5;
+            /* Olive theme to match site */
+            --bg-light: #F5F7F2;
             --text-light: #2C2C2C;
-            --accent-light: #D97757;
-            --bg-dark: #1A1614;
-            --text-dark: #F5F1ED;
-            --accent-dark: #E89B7E;
+            --accent-light: #6B8E23;
+            --bg-dark: #1E2616;
+            --text-dark: #F1F5EC;
+            --accent-dark: #A3B18A;
         }
 
         * {
